# rust_chatgpt

./: .gitignore  README.md  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_rust_bridge_template/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  common.dart  consts.dart  main.dart
lib/models/: native_model.dart  platform_model.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: flutter.rs  flutter_ffi.rs  lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
