[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# name = "chatgpt"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["flutter"]
flutter = ["flutter_rust_bridge"]

[dependencies]
anyhow = "1"
log = "0.4"
# common = { path = "libs/common" }
lazy_static = "1.4"
chrono = "0.4.24"
flutter_rust_bridge = { version = "1.71.1", optional = true }
